--- a/sass/sass/modual/_form-beta.scss
+++ b/sass/sass/modual/_form-beta.scss
@@ -1258,6 +1258,7 @@ select::-ms-expand {
         input[type="button"],
         input[type="search"] {
             margin: .3em;
+            white-space: normal;
         }
     }
 
