2022-0308 跳窗內容項目 css debug

--- a/sass/sass/modual/_modal.scss
+++ b/sass/sass/modual/_modal.scss
@@ -74,6 +74,7 @@
                 color: darken($primaryColor, 10);
                 border: 1px solid;
                 padding: .5em 1.5em;
+                display: inline-block;
             }
         }
     }
