--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -1001,8 +1001,10 @@ b, b.R, b.B{
     margin: 2em 0;
     .foto{
         text-align: center;
-        img{
-            height: 300px;
+        img{ height: 300px; }
+
+        @media screen and (max-width: 390px) {
+            img{ height: auto; }
         }
     }
     .info{
