--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -97,19 +97,41 @@ footer {
 }
 
 // 工程師燈箱
-.ui-dialog{
-    padding: 1.25em 0 !important;
-    .ui-dialog-content{
-        padding: 0.5em 2em !important;
-    }
-    #confirmDialog{
+// .ui-dialog{
+//     padding: 1.25em 0 !important;
+//     .ui-dialog-content{
+//         padding: 0.5em 2em !important;
+//     }
+//     #confirmDialog{
+//         p{
+//             line-height: 1.6;
+//             text-align: center;
+//         }
+//     }
+// }
+.infoBox{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.75);
+    z-index: 999;
+
+    .content{
+        background: #fff;
+        margin: 10% auto 0;
+        width: 460px;
+        padding: 2em 3em;
+        border-radius: 4px;
+
         p{
-            line-height: 1.6;
             text-align: center;
+            font-size: 1.125em;
+            line-height: 1.6;
         }
     }
-    
 }
+
+
 
 // 登入頁
 .Login{
