--- a/sass/sass/modual/_modal.scss
+++ b/sass/sass/modual/_modal.scss
@@ -98,7 +98,7 @@
         }
     }
 
-    li a{ display: inherit; }
+    li a{  display: initial; }
 
     @include screen('mobile') {
         width: 90%;
