--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -347,8 +347,8 @@ footer {
                         margin: 8px 0;
 
                         a {
-                            padding-left: 10px;
-                            padding-right: 10px;
+                            padding-left: 0;
+                            padding-right: 0;
                             text-decoration: underline;
 
                             &:focus,
