--- a/sass/page/_personal.scss
+++ b/sass/page/_personal.scss
@@ -45,9 +45,14 @@
 
 			&:before{
 				background: url(../images/deco-been-1-personal.png) 50% 50% no-repeat;
+				top: 420px;
 			}
 		}
 		.col{
+
+			&:after{
+				display: none;
+			}
 			.login_title{
 				padding-right: 54%;
 				.main-title{
@@ -57,6 +62,8 @@
 			.pin_panel{
 				padding-right: 54%;
 				text-align: center;
+				padding-top: 1.5em;
+    			padding-bottom: 10em;
 				button{
 					border-radius: 40px;
                     padding: .75em 0;
@@ -65,6 +72,7 @@
 				}
 			}
 			.tips {
+				box-shadow: rgba(0,0,0,0.1) 0px -80px 90px;
 				// background: #ffffffba;
 				// backdrop-filter: blur(5px);
 				// box-shadow: rgba(0, 0, 0, .1) 0px -80px 90px;
