--- a/sass/sass/common/_typography.scss
+++ b/sass/sass/common/_typography.scss
@@ -1,6 +1,79 @@
+// from hyui_flex 的 _typography.scss 
+// .cp {
+//     font-size: 1em * 1.0666666;
+//     line-height: 1.65em;
+//     @include screen('xs_mobile') {
+//         font-size: 1em * 1.2;
+//     }
+//     h1 {
+//         font-size: 2em;
+//     }
+//     h2 {
+//         font-size: 1.75em;
+//         margin-bottom: 1.25em;
+//     }
+//     h3 {
+//         font-size: 1.5em;
+//     }
+//     h4 {
+//         font-size: 1.25em;
+//         margin-top: 0;
+//         margin-bottom: 1em;
+//     }
+//     h5 {
+//         font-size: 1.125em;
+//         margin-top: 0;
+//         margin-bottom: 1em;
+//     }
+//     h6 {
+//         font-size: 1.125em;
+//         margin-top: 0;
+//         margin-bottom: 1em;
+//     }
+//     p {
+//         font-size: 1em;
+//         line-height: 1.85em;
+//         margin-top: 0;
+//     }
+//     ul,
+//     ol {
+//         font-size: 1em;
+//         margin-bottom: 1em;
+//         li {
+//             margin-bottom: 0.5em;
+//         }
+//     }
+//     dd,
+//     th,
+//     td figure {
+//         font-size: 1em;
+//     }
+//     blockquote {
+//         background: #f1f1f1;
+//         font-style: normal;
+//         display: block;
+//         font-size: 1em;
+//         border-left: 5px solid $primaryColor;
+//         padding: 2em;
+//         box-sizing: border-box;
+//         margin: 0 0em 2em;
+//     }
+//     img {
+//         max-width: 100%;
+//         @include screen('mobile') {
+//             max-width: 100%;
+//             width: auto;
+//             clear: both;
+//         }
+//     }
+// }
+// @import "compass/_css3";
+
+
+
 @import "compass";
-$base-font-size: 16px;
-$base-line-height: 16px;
+$base-font-size: 18px;
+$base-line-height: 18px;
 $rhythm-unit: 'em';
 $base-font-stack: $font-family;
 @include establish-baseline();
