--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -19,6 +19,26 @@ body {
         padding: 0;
     }
 }
+// scroll 樣式統一
+body {
+  overflow-y: auto;
+  scrollbar-color: #000 rgba(0, 0, 0, 0.2);
+  scrollbar-width: thin;
+}
+body::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: #000;
+}
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.1);
+}
 
 // 最外圍預設為100%
 .wrapper {
@@ -750,6 +770,11 @@ footer {
                             border: 1px solid #b70000;
                         }
                     }
+                }
+
+                p.note{
+                    text-align: center;
+                    margin-top: 2em;
                 }
             }
         }
@@ -1680,6 +1705,31 @@ b.B {
         }
     }
 
+    &.readonly{
+        .time_period {
+            cursor: auto;
+        }
+        .time_period .AM,
+        .time_period .PM {
+            .col {
+                &:hover,
+                &:focus {
+                    cursor: auto;
+                    color: #222;
+                    background: #fff;
+                }
+                &.full {
+                    &:hover,
+                    &:focus {
+                        cursor: auto;
+                        background: #ddd;
+                        color: #666;
+                    }
+                }
+            }
+        }
+    }
+
     // 日期
     .date {
         position: relative;
@@ -1777,6 +1827,246 @@ b.B {
                     &:hover,
                     &:focus {}
                 }
+            }
+        }
+    }
+}
+
+// 申請者
+.applicant{
+    font-size: 125%;
+    margin: 20px 0;
+    padding: 10px 0 10px 60px;
+    background: url(../images/icon/icon_user.svg) 20px 50% no-repeat, #f6f6f6;
+    background-size: 32px 32px;
+    // border-radius: 6px 6px 0 0;
+    border-top: 1px solid darken($primaryColor, 5);
+    border-bottom: 1px solid darken($primaryColor, 5);
+    font-weight: bold;
+    color: darken($primaryColor, 5);
+    overflow: hidden;
+
+    b{
+        color: #fff;
+        display: inline-block;
+        margin-left: 30px;
+        padding: 6px 30px;
+        position: relative;
+        z-index: 2;
+    }
+
+    position: relative;
+    &:after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: $primaryColor;
+        right: -180px;
+        top: 0;
+        z-index: 1;
+        transform: skewX(-12deg);
+    }
+}
+.fill_steps{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    a{
+        flex: 1 1 auto;
+        margin: 0 4px;
+        display: block;
+        padding: .65em 0;
+        text-align: center;
+        background: #eee;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+        border-radius: 6px;
+        color: #222;
+        font-size: 112.5%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        b{
+            display: inline-block;
+            width: 26px;
+            height: 26px;
+            line-height: 22px;
+            background: darken($primaryColor, 5);
+            color: #fff;
+            border: 2px solid transparent;
+            border-radius: 50%;
+            font-size: 70%;
+            margin-right: 5px;
+            padding: 0;
+        }
+
+        transition: .1s;
+
+        &:hover, &:focus,
+        &.active{
+            background: darken($primaryColor, 5);
+            color: #fff;
+            b{
+                border-color:  #fff;
+                background: transparent;
+                color: #fff;
+            }
+        }
+    }
+
+    @include screen('tablet') {
+        flex-wrap: wrap;
+        a{
+            flex: 1 1 100%;
+            margin: 4px 0;
+        }
+    }
+}
+// 申請者卡片式
+.ID_cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .col{
+        flex: 0 0 48%;
+        // border: 1px solid #cbcbcb;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+        border-radius: 1em;
+        margin: 1em 0;
+        padding-bottom: 2em;
+        overflow: hidden;
+        transition: .2s ease;
+
+        &:hover, &:focus{
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+        }
+
+        // 把名額加回來
+        &.addBack{
+            min-height: 440px;
+            cursor: pointer;
+            background: #f6f6f6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 0;
+            b{
+                font-size: 150%;
+                text-align: center;
+                span{
+                    display: block;
+                    width: 42px;
+                    height: 42px;
+                    margin: auto auto 20px;
+                    transform: scale(1) rotate(0);
+                    opacity: .45;
+                    transition: .2s ease;
+                }
+            }
+            &:hover, &:focus{
+                color: #fff;
+                background: darken($primaryColor, 5);
+                b{
+                    span{
+                        transform: scale(1.1) rotate(90deg);
+                        opacity: 1;
+                        filter: invert(1);
+                    }
+                }
+            }
+        }
+    }
+
+    .state{
+        background: #bf0000;
+        color: #fff;
+        padding: .5em 1.5em;
+        text-align: right;
+    }
+    .ID_info{
+        display:flex;
+        padding: 2.2em 1.5em 1em;
+        .foto{
+            flex: 0 0 40%;
+            border: solid 1px #ddd;
+            position: relative;
+            img{
+                height: 100%;
+            }
+            span{
+                position: absolute;
+                width: 160px;
+                text-align: center;
+                left: 50%;
+                top: 50%;
+                padding: 2px 4px;
+                color: #fff;
+                background: #000;
+                transform: translate(-50%, -50%);
+            }
+            &.passed{
+                span{
+                    display: none;
+                }
+            }
+        }
+        .content{
+            flex: 1 1 55%;
+            b{
+                font-size: 150%;
+                line-height: 2;
+                padding-left: 2em;
+                background: url(../images/icon/icon_user.svg) 10px 50% no-repeat;
+                background-size: 36px 36px;
+            }
+            ul{}
+        }
+    }
+    .btn_grp{
+        display: flex;
+        flex-flow: row-reverse nowrap;
+        padding: 0 1.5em;
+        .btn{
+            flex: 1 1 auto;
+        }
+    }
+    // 填寫完成
+    .col.complete{
+        .state{
+            background: #eee;
+            color: darken($primaryColor, 10);
+        }
+        .foto{
+            span{
+                // color: #bf0000;
+                // border: 1px solid #bf0000;
+                color: #222;
+                border: 1px solid #222;
+                background: #fff;
+                box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+            }
+        }
+    }
+
+    @include screen('tablet') {
+        .col{
+            flex: 1 1 100%;
+        }
+    }
+    @include screen('mobile') {
+        .ID_info{
+            flex-wrap: wrap;
+            .foto, .content{
+                flex: 1 1 100%;
+            }
+        }
+        .btn_grp{
+            flex-flow: row wrap;
+            .btn{
+                flex: 1 1 100%;
             }
         }
     }
