--- a/sass/sass/element/_btn.scss
+++ b/sass/sass/element/_btn.scss
@@ -136,6 +136,7 @@ $btn-radius:.2em;
         border: darken($primaryColor, 15)!important;
     }
 }
+
 // 一般按鈕
 .btn-normal{
     background: #474747!important;
@@ -147,6 +148,18 @@ $btn-radius:.2em;
         color: #fff !important;
         background: #222!important;
         border: solid 1px #65656E!important;
+    }
+}
+.btn-normal_P{
+    background: #fff!important;
+    color: #474747 !important;
+    border: solid 1px #acacac!important;
+    text-shadow: none!important;
+    &:hover,
+    &:focus{
+        color: #fff !important;
+        background: #474747!important;
+        border: solid 1px #acacac!important;
     }
 }
 
@@ -173,6 +186,13 @@ $btn-radius:.2em;
             margin-top: -5px;
         }
     }
+}
+// 預覽
+.btn-preview{
+    font-size: 112.5%;
+    border-radius: 50px;
+    padding: .75em 2em;
+    @include btn_setting(darken(#996c33, 0), #FFF);
 }
 
 .disabled, [disabled] {
