--- a/sass/sass/modual/_modal.scss
+++ b/sass/sass/modual/_modal.scss
@@ -48,11 +48,11 @@
     top: 12%;
     left: 50%;
     margin-left: -300px;
-    padding: 3em 1.5em 2em;
+    padding: 3em 1.5em 6em;
     box-sizing: border-box;
     border-radius:8px;
     box-shadow:1px 1px 15px RGBA(0, 0, 0, .5);
-    overflow-y: scroll;
+    overflow-y: hidden;
     animation: scaleUp .5s ease-out;
     h2 {
         border-bottom: 1px solid $primaryColor;
@@ -62,6 +62,8 @@
     }
 
     .modal_content{
+        height: 100%;
+        overflow-y: scroll;
         .center_box{
             text-align: center;
             padding: 1em 0;
